# story

./: .gemini  .gitignore  GEMINI.md  README.md  app.py  pyproject.toml  requirements.txt  story_concepts_diagrams.md
data/raw_stories/: Chapter_1_The_Three_Musketeers.md  no_characters.md  test_chapter.md
examples/: run_example_analysis.py
output/analysis_results/: analysis_report_Chapter_1_The_Three_Musketeers.txt  analysis_report_The_Three_Musketeers.txt  test_chapter_analysis.md
output/character_summaries/: D'Artagnan.md  Don_Quixote.md  Duc_de_Richelieu.md
output/narrative_analysis_reports/: test_chapter_narrative_analysis_report.md
pbi/: PBI-001_Setup_Script_Environment.md  PBI-002_Implement_Basic_Text_Analysis.md  PBI-003_Implement_Character_Identification.md  PBI-004_Generate_Markdown_Report.md  PBI-005_Character_Profiling.md  PBI-006_Implement_Two_Step_Setup_Payoff_Detection.md  PBI-007_Refactor_Text_Chunking.md  PBI-008_Implement_Text_Compression_Utility.md  PBI-009_Multi_Agent_Framework_for_Character_Agents.md  PBI-010_Refactor_Analysis_Output_Structure.md  PBI-011_Implement_Streamlit_Web_Interface.md
python/examples/: run_example_analysis.py
python/scripts/: analyze_narrative.py  analyze_story.py  character_profiler.py  extract_chapter.py
python/tests/: test_character_profiler.py  test_narrative_analysis.py
story/: analysis.py  extractor.py  narrative.py  profiler.py
story/scripts/: analyze_story.py
tests/: test_character_profiler.py  test_narrative_analysis.py  test_story_analysis.py  test_text_compression.py
(+8 files in other folders)
